[package]
name = "masterword"
version = "0.1.0"
authors = ["Yew App Developer <name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
web-sys = "0.3.46"
log = "0.4.6"
wasm-logger = "0.2.0"
rand = "0.8.5"
getrandom = {version = "0.2", features = ["js"]}
hotkey = {path = "../_libraries/rust/hotkey-rs"}